--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -52,7 +52,8 @@ javac.source=1.7
 javac.target=1.7
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${libs.junit_4.classpath}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
@@ -98,3 +99,4 @@ run.test.classpath=\
     ${build.test.classes.dir}
 source.encoding=UTF-8
 src.dir=${file.reference.marvis-graph-src}
+test.testsrc.dir=testsrc
