--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -3,10 +3,12 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=marvis-graph
-application.vendor=manuel
+application.desc=
+application.homepage=http://marvis.gobics.de
+application.title=MarVis-Graph
+application.vendor=Manuel Landesfeind
 build.classes.dir=${build.dir}/classes
-build.classes.excludes=**/*.java,**/*.form
+build.classes.excludes=**/*.form
 # This directory is removed when the project is cleaned:
 build.dir=build
 build.generated.dir=${build.dir}/generated
@@ -33,7 +35,7 @@ file.reference.jexcelapi-v2.6.12.jar=../marvis-libraries/jexcelapi-v2.6.12.jar
 file.reference.marvis-graph-src=src
 includes=**
 jar.archive.disabled=${jnlp.enabled}
-jar.compress=false
+jar.compress=true
 jar.index=${jnlp.enabled}
 javac.classpath=\
     ${reference.marvis-utils.jar}:\
@@ -57,7 +59,7 @@ javac.test.classpath=\
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
-javadoc.author=false
+javadoc.author=true
 javadoc.encoding=${source.encoding}
 javadoc.noindex=false
 javadoc.nonavbar=false
