--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,6 +33,7 @@ file.reference.commons-math3-3.0.jar=../marvis-libraries/commons-math3-3.0.jar
 file.reference.jdom.jar=../marvis-libraries/jdom.jar
 file.reference.jexcelapi-v2.6.12.jar=../marvis-libraries/jexcelapi-v2.6.12.jar
 file.reference.marvis-graph-src=src
+file.reference.mysql-connector-java-5.1.17-bin.jar=../marvis-libraries/mysql-connector-java-5.1.17-bin.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=true
@@ -44,7 +45,8 @@ javac.classpath=\
     ${file.reference.jexcelapi-v2.6.12.jar}:\
     ${file.reference.jdom.jar}:\
     ${file.reference.commons-math3-3.0.jar}:\
-    ${libs.marvis-utils-swing.classpath}
+    ${libs.marvis-utils-swing.classpath}:\
+    ${file.reference.mysql-connector-java-5.1.17-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
