Enhance download of KEGG networks by listing all compounds

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,6 +30,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.commons-math3-3.0.jar=../marvis-libraries/commons-math3-3.0.jar
+file.reference.jargs-1.0.jar=../marvis-libraries/jargs-1.0.jar
 file.reference.jdom.jar=../marvis-libraries/jdom.jar
 file.reference.jexcelapi-v2.6.12.jar=../marvis-libraries/jexcelapi-v2.6.12.jar
 file.reference.marvis-graph-src=src
@@ -46,7 +47,8 @@ javac.classpath=\
     ${file.reference.jdom.jar}:\
     ${file.reference.commons-math3-3.0.jar}:\
     ${libs.marvis-utils-swing.classpath}:\
-    ${file.reference.mysql-connector-java-5.1.17-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.17-bin.jar}:\
+    ${file.reference.jargs-1.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
