--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,6 +31,7 @@ endorsed.classpath=
 excludes=
 file.reference.commons-math3-3.0.jar=../marvis-libraries/commons-math3-3.0.jar
 file.reference.jargs-1.0.jar=../marvis-libraries/jargs-1.0.jar
+file.reference.jblas-1.2.2.jar=../marvis-libraries/jblas-1.2.2.jar
 file.reference.jdom.jar=../marvis-libraries/jdom.jar
 file.reference.jexcelapi-v2.6.12.jar=../marvis-libraries/jexcelapi-v2.6.12.jar
 file.reference.marvis-graph-src=src
@@ -48,7 +49,8 @@ javac.classpath=\
     ${file.reference.commons-math3-3.0.jar}:\
     ${libs.marvis-utils-swing.classpath}:\
     ${file.reference.mysql-connector-java-5.1.17-bin.jar}:\
-    ${file.reference.jargs-1.0.jar}
+    ${file.reference.jargs-1.0.jar}:\
+    ${file.reference.jblas-1.2.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
