--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,6 +31,7 @@ endorsed.classpath=
 excludes=
 file.reference.commons-math3-3.0.jar=../marvis-libraries/commons-math3-3.0.jar
 file.reference.jargs-1.0.jar=../marvis-libraries/jargs-1.0.jar
+file.reference.jblas-1.2.0.jar=../marvis-libraries/jblas-1.2.0.jar
 file.reference.jdom.jar=../marvis-libraries/jdom.jar
 file.reference.jexcelapi-v2.6.12.jar=../marvis-libraries/jexcelapi-v2.6.12.jar
 file.reference.marvis-graph-src=src
@@ -48,7 +49,8 @@ javac.classpath=\
     ${file.reference.commons-math3-3.0.jar}:\
     ${libs.marvis-utils-swing.classpath}:\
     ${file.reference.mysql-connector-java-5.1.17-bin.jar}:\
-    ${file.reference.jargs-1.0.jar}
+    ${file.reference.jargs-1.0.jar}:\
+    ${file.reference.jblas-1.2.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -96,9 +98,6 @@ reference.marvis-utils.jar=${project.marvis-utils}/dist/marvis-utils.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
-# Space-separated list of JVM arguments used when running the project.
-# You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
-# To set system properties for unit tests define test-sys-prop.name=value:
 run.jvmargs=-Xms3g
 run.test.classpath=\
     ${javac.test.classpath}:\
