Correction after broken merge

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -50,7 +50,8 @@ javac.classpath=\
     ${libs.marvis-utils-swing.classpath}:\
     ${file.reference.mysql-connector-java-5.1.17-bin.jar}:\
     ${file.reference.jargs-1.0.jar}:\
-    ${file.reference.jblas-1.2.0.jar}
+    ${file.reference.jblas-1.2.0.jar}:\
+    ${file.reference.jblas-1.2.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
