--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,6 +29,7 @@ dist.jar=${dist.dir}/marvis-graph.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.commons-compress-1.5.jar=../marvis-libraries/commons-compress-1.5.jar
 file.reference.commons-math3-3.0.jar=../marvis-libraries/commons-math3-3.0.jar
 file.reference.jargs-1.0.jar=../marvis-libraries/jargs-1.0.jar
 file.reference.jblas-1.2.2.jar=../marvis-libraries/jblas-1.2.2.jar
@@ -50,7 +51,8 @@ javac.classpath=\
     ${libs.marvis-utils-swing.classpath}:\
     ${file.reference.mysql-connector-java-5.1.17-bin.jar}:\
     ${file.reference.jargs-1.0.jar}:\
-    ${file.reference.jblas-1.2.2.jar}
+    ${file.reference.jblas-1.2.2.jar}:\
+    ${file.reference.commons-compress-1.5.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -98,7 +100,6 @@ reference.marvis-utils.jar=${project.marvis-utils}/dist/marvis-utils.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
-run.jvmargs=-Xms3g
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
