--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -52,7 +52,9 @@ javac.classpath=\
     ${file.reference.mysql-connector-java-5.1.17-bin.jar}:\
     ${file.reference.jargs-1.0.jar}:\
     ${file.reference.jblas-1.2.2.jar}:\
-    ${file.reference.commons-compress-1.5.jar}
+    ${file.reference.commons-compress-1.5.jar}:\
+    ${libs.Batik_SVG.classpath}:\
+    ${libs.POI-XML.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
