Update build script

--- a/build.xml
+++ b/build.xml
@@ -89,8 +89,7 @@
 
 	<target name="pack" depends="jar">
 		<property file="nbproject/project.properties"/>
-		<copy file="start.bat" todir="dist/" />
-		<copy file="start.sh" todir="dist/" />
+		<copy file="start_linux.sh" todir="dist/" />
 		<zip destfile="marvis-graph.zip" update="false" basedir="dist/" excludes="README*" />
 	</target>
 </project>
